--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "express-fileupload": "^1.1.6",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.4",
-    "mongoose-unique-validator": "^2.0.3",
+    "mongoose-unique-validator": "^2.0.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
